--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -271,16 +271,16 @@
                 </div>
               </div>
               <div class="pos-bg">
-                <input id="pos-svg" type="checkbox" class="pos-box">
-                <label for="pos-svg">pos</label>
+                <input id="pos-svg-drop-shadow" type="checkbox" class="pos-box">
+                <label for="pos-svg-drop-shadow">pos</label>
               </div>
             </div>
             <div class="filter">
               <span>CSS filter drop-shadow()</span>
               <div><img class="target react" src="react-no-filter.svg"></div>
               <div class="pos-bg">
-                <input id="pos-svg" type="checkbox" class="pos-box">
-                <label for="pos-svg">pos</label>
+                <input id="pos-css-drop-shadow" type="checkbox" class="pos-box">
+                <label for="pos-css-drop-shadow">pos</label>
               </div>
             </div>
           </div>
