--- a/public/private/scroll24.html
+++ b/public/private/scroll24.html
@@ -10,8 +10,8 @@
   }
   #sticky {
     width: 100%;
+    height: 4em;
     background: #bfa79b;
-    padding: 2em;
   }
   .fixed {
     position: fixed;
