--- a/src/private/scroll24.html
+++ b/src/private/scroll24.html
@@ -17,8 +17,8 @@
   }
   #sticky {
     width: 100%;
+    height: 4em;
     background: #bfa79b;
-    padding: 2em;
   }
   .fixed {
     position: fixed;
