--- a/src/private/video03.html
+++ b/src/private/video03.html
@@ -22,19 +22,29 @@
   background-color: #000;
   overflow: hidden;
 }
+#bar:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 10em;
+}
 #bar {
   position: absolute;
   z-index: 2;
-  top: 0;
+  transform: none;
   width: 100%;
   height: 4em;
+  bottom: 0;
   background: transparent;
   display: flex;
   flex-wrap: nowrap;
   justify-content: flex-end;
 }
 #bar:hover {
-  top: 0 !important;
+  transform: none !important;
 }
 .buttons {
   background: transparent;
@@ -42,7 +52,7 @@
   border-radius: 8px;
 }
 button {
-  margin: 0 0 1em 1em;
+  margin: 1em 0 0 1em;
   padding: 1em;
   opacity: 0.9;
 }
@@ -50,8 +60,8 @@ button:hover {
   cursor: pointer;
 }
 .hide-bar {
-  top: -4em !important;
-  transition: top 0.4s;
+  transform: translateY(100%) !important;
+  transition: transform 0.4s;
 }
 .hide-cursor {
   cursor: none;
