--- a/src/private/index.html
+++ b/src/private/index.html
@@ -81,10 +81,7 @@
       <li><a href="video01.html">video 1</a></li>
       <li><a href="video02.html">video 2</a></li>
       <li><a href="video03.html">video 3</a></li>
-      <li><a href="https://www.w3schools.com/html/html5_video.asp">video 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.netflix.com/watch/80076852?trackId=14170286&amp;tctx=1%2C0%2C0dee1072-242b-4c33-ad1d-17cd036486b8-141014361">video 4 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.amazon.com/LEGO-Disney-Moanas-Ocean-Voyage/dp/B01J8PBC0O/ref=sr_1_1?s=toys-and-games&amp;ie=UTF8&amp;qid=1497578840&amp;sr=1-1&amp;keywords=lego+moana">video 5 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.youtube.com/watch?v=0AWhsBNU1jU">video 6 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.w3schools.com/html/html5_video.asp">video (w3schools)<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
     </ul>
   </body>
 </html>
