--- a/src/private/video03.html
+++ b/src/private/video03.html
@@ -33,23 +33,18 @@
 }
 #bar {
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   transform: none;
   width: 100%;
   height: 4em;
   bottom: 0;
-  background: transparent;
+  background: linear-gradient(0deg, rgba(0, 0, 0, .8) 0, rgba(0, 0, 0, .35) 60%, transparent);
   display: flex;
   flex-wrap: nowrap;
   justify-content: flex-end;
 }
 #bar:hover {
   transform: none !important;
-}
-.buttons {
-  background: transparent;
-  border: 1px solid transparent;
-  border-radius: 8px;
 }
 button {
   margin: 1em 0 0 1em;
@@ -68,6 +63,7 @@ button:hover {
 }
 video {
   position: relative;
+  z-index: 0;
   width: 100%;
   height: 100%;
 }
