--- a/src/private/index.html
+++ b/src/private/index.html
@@ -82,6 +82,7 @@
       <li><a href="video01.html">video 1</a></li>
       <li><a href="video02.html">video 2</a></li>
       <li><a href="video03.html">video 3</a></li>
+      <li><a href="video04.html">video 4</a></li>
     </ul>
   </body>
 </html>
