changes for drop-shadow

--- a/src/private/layers01.html
+++ b/src/private/layers01.html
@@ -58,6 +58,10 @@
     .hidden {
       display: none;
     }
+    #drop-shadow {
+      right: 32px;
+      bottom: 32px;
+    }
     </style>
   </head>
   <body>
