--- a/src/private/layers02.html
+++ b/src/private/layers02.html
@@ -49,8 +49,8 @@
       z-index: 1;
       left: 0;
       top: 0;
-      width: 100%;
-      height: 100vh;
+      right: 0;
+      bottom: 0;
       opacity: 0.99;
     }
     .fg {
@@ -58,6 +58,10 @@
     }
     .hidden {
       display: none;
+    }
+    #drop-shadow {
+      right: 32px;
+      bottom: 32px;
     }
     </style>
   </head>
