--- a/public/private/layers01.html
+++ b/public/private/layers01.html
@@ -50,6 +50,10 @@
     }
     .hidden {
       display: none;
+    }
+    #drop-shadow {
+      right: 32px;
+      bottom: 32px;
     }</style></head><body><ul id="nav"><li class="hidden">unset</li><li class="hidden">blur</li><li class="hidden">brightness</li><li class="hidden">contrast</li><li class="hidden">drop-shadow</li><li class="hidden">grayscale</li><li class="hidden">hue-rotate</li><li class="hidden">invert</li><li class="hidden">opacity</li><li class="hidden">saturate</li><li class="hidden">sepia</li></ul><div class="hidden" id="unset"></div><div class="hidden" id="blur"></div><div class="hidden" id="brightness"></div><div class="hidden" id="contrast"></div><div class="hidden" id="drop-shadow"></div><div class="hidden" id="grayscale"></div><div class="hidden" id="hue-rotate"></div><div class="hidden" id="invert"></div><div class="hidden" id="opacity"></div><div class="hidden" id="saturate"></div><div class="hidden" id="sepia"></div><script>(function() {
       var params, show, selected;
       var setSelected = function(id) {
