--- a/public/private/layers02.html
+++ b/public/private/layers02.html
@@ -42,8 +42,8 @@
       z-index: 1;
       left: 0;
       top: 0;
-      width: 100%;
-      height: 100vh;
+      right: 0;
+      bottom: 0;
       opacity: 0.99;
     }
     .fg {
@@ -51,6 +51,10 @@
     }
     .hidden {
       display: none;
+    }
+    #drop-shadow {
+      right: 32px;
+      bottom: 32px;
     }</style></head><body><ul id="nav"><li class="hidden">unset</li><li class="hidden">blur</li><li class="hidden">brightness</li><li class="hidden">contrast</li><li class="hidden">drop-shadow</li><li class="hidden">grayscale</li><li class="hidden">hue-rotate</li><li class="hidden">invert</li><li class="hidden">opacity</li><li class="hidden">saturate</li><li class="hidden">sepia</li></ul><div class="hidden" id="unset"><img src="bg.jpg"></div><div class="hidden" id="blur"><img src="bg.jpg"></div><div class="hidden" id="brightness"><img src="bg.jpg"></div><div class="hidden" id="contrast"><img src="bg.jpg"></div><div class="hidden" id="drop-shadow"><img src="bg.jpg"></div><div class="hidden" id="grayscale"><img src="bg.jpg"></div><div class="hidden" id="hue-rotate"><img src="bg.jpg"></div><div class="hidden" id="invert"><img src="bg.jpg"></div><div class="hidden" id="opacity"><img src="bg.jpg"></div><div class="hidden" id="saturate"><img src="bg.jpg"></div><div class="hidden" id="sepia"><img src="bg.jpg"></div><script>(function() {
       var params, show, selected;
       var setSelected = function(id) {
