--- a/src/private/video03.html
+++ b/src/private/video03.html
@@ -84,7 +84,6 @@ video {
 </section>
 
 <script>
-(() => {
   var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
@@ -92,7 +91,7 @@ video {
   var video = document.getElementById('video');
   var timer = null;
 
-  var setTimer = () => {
+  var setTimer = function() {
     player.className = '';
     bar.className = '';
 
@@ -101,7 +100,7 @@ video {
       timer = null;
     }
 
-    timer = window.setInterval(() => {
+    timer = window.setInterval(function() {
       window.clearInterval(timer);
       timer = null;
       player.className = 'hide-cursor';
@@ -111,13 +110,16 @@ video {
 
   window.addEventListener('mousemove', setTimer);
 
-  fullscreen.addEventListener('click', () => {
-    if (document.webkitIsFullScreen || document.mozFullScreen) {
+  fullscreen.addEventListener('click', function() {
+    if (document.webkitIsFullScreen || document.mozFullScreen || document.msFullscreenElement) {
       if (document.webkitExitFullscreen) {
         document.webkitExitFullscreen();
       }
       if (document.mozCancelFullScreen) {
         document.mozCancelFullScreen();
+      }
+      if (document.msExitFullscreen) {
+        document.msExitFullscreen();
       }
       fullscreen.textContent = 'Fullscreen';
     } else {
@@ -127,11 +129,14 @@ video {
       if (player.mozRequestFullScreen) {
         player.mozRequestFullScreen();
       }
+      if (player.msRequestFullscreen) {
+        player.msRequestFullscreen();
+      }
       fullscreen.textContent = 'Exit Fullscreen';
     }
   });
 
-  play.addEventListener('click', () => {
+  play.addEventListener('click', function() {
     if (video.paused) {
       video.play();
     } else {
@@ -140,7 +145,6 @@ video {
   });
 
   setTimer();
-})();
 </script>
 </body>
 
