--- a/public/private/video04.html
+++ b/public/private/video04.html
@@ -69,8 +69,7 @@ video {
   background-position-x: -2px;
   width: 100px;
   height: 60px;
-}</style></head><body><section class="frame"><div id="player"><div class="layer"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div class="layer"><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div><div class="layer"><div id="seek"><div class="preview"></div></div></div></div></section><script>(() => {
-  var player = document.getElementById('player');
+}</style></head><body><section class="frame"><div id="player"><div class="layer"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div class="layer"><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div><div class="layer"><div id="seek"><div class="preview"></div></div></div></div></section><script>var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var seek = document.getElementById('seek');
   var fullscreen = document.getElementById('fullscreen');
@@ -78,7 +77,7 @@ video {
   var video = document.getElementById('video');
   var timer = null;
 
-  var setTimer = () => {
+  var setTimer = function() {
     player.className = '';
     bar.className = '';
     seek.style = '';
@@ -88,7 +87,7 @@ video {
       timer = null;
     }
 
-    timer = window.setInterval(() => {
+    timer = window.setInterval(function() {
       window.clearInterval(timer);
       timer = null;
       player.className = 'hide-cursor';
@@ -99,13 +98,16 @@ video {
 
   window.addEventListener('mousemove', setTimer);
 
-  fullscreen.addEventListener('click', () => {
-    if (document.webkitIsFullScreen || document.mozFullScreen) {
+  fullscreen.addEventListener('click', function() {
+    if (document.webkitIsFullScreen || document.mozFullScreen || document.msFullscreenElement) {
       if (document.webkitExitFullscreen) {
         document.webkitExitFullscreen();
       }
       if (document.mozCancelFullScreen) {
         document.mozCancelFullScreen();
+      }
+      if (document.msExitFullscreen) {
+        document.msExitFullscreen();
       }
       fullscreen.textContent = 'Fullscreen';
     } else {
@@ -115,11 +117,14 @@ video {
       if (player.mozRequestFullScreen) {
         player.mozRequestFullScreen();
       }
+      if (player.msRequestFullscreen) {
+        player.msRequestFullscreen();
+      }
       fullscreen.textContent = 'Exit Fullscreen';
     }
   });
 
-  play.addEventListener('click', () => {
+  play.addEventListener('click', function() {
     if (video.paused) {
       video.play();
     } else {
@@ -127,5 +132,4 @@ video {
     }
   });
 
-  setTimer();
-})();</script></body></html>
+  setTimer();</script></body></html>
