--- a/public/private/video05.html
+++ b/public/private/video05.html
@@ -2,58 +2,55 @@
   font-family: "Open Sans", "Segoe UI", "Helvetica Neue", sans-serif;
 }
 .frame {
-  background-color: black;
+  position: absolute;
   width: 600px;
   height: 330px;
   max-width: 100%;
+  background-color: black;
 }
 #player {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-  background: transparent;
-  background-color: #000;
   overflow: hidden;
+}
+.container {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 #bar {
   position: absolute;
   z-index: 2;
-  top: 0;
+  bottom: 0;
   width: 100%;
   height: 4em;
-  background: transparent;
   display: flex;
   flex-wrap: nowrap;
   justify-content: flex-end;
 }
-#bar:hover {
-  top: 0 !important;
-}
-.buttons {
-  background: transparent;
-  border: 1px solid transparent;
-  border-radius: 8px;
-}
 button {
-  margin: 0 0 1em 1em;
+  margin: 1em 0 0 1em;
   padding: 1em;
   opacity: 0.9;
 }
-button:hover {
+#bar:hover {
   cursor: pointer;
+  opacity: 1 !important;
 }
 .hide-bar {
-  top: -4em !important;
-  transition: top 0.4s;
+  opacity: 0;
+  transition: opacity 0.4s;
 }
 .hide-cursor {
   cursor: none;
 }
 video {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-}</style></head><body><section class="frame"><div id="player"><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section><script>var player = document.getElementById('player');
+}</style></head><body><section class="frame"><div id="player"><div class="container"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div><div class="container"><div id="bar"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div></section><script>var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
   var play = document.getElementById('play');
