--- a/public/private/video04.html
+++ b/public/private/video04.html
@@ -50,6 +50,9 @@ button:hover {
 .hide-cursor {
   cursor: none;
 }
+.hide-seek {
+  opacity: 0 !important;
+}
 video {
   position: relative;
   z-index: 0;
@@ -80,7 +83,7 @@ video {
   var setTimer = function() {
     player.className = '';
     bar.className = '';
-    seek.style = '';
+    seek.className = '';
 
     if (timer) {
       window.clearInterval(timer);
@@ -92,7 +95,7 @@ video {
       timer = null;
       player.className = 'hide-cursor';
       bar.className = 'hide-bar';
-      seek.style = 'opacity: 0;';
+      seek.className = 'hide-seek';
     }, 2000);
   };
 
