--- a/src/private/video05.html
+++ b/src/private/video05.html
@@ -15,15 +15,10 @@
   max-width: 100%;
   background-color: black;
 }
-#player {
+#player,
+.container,
+video {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.container {
-  position: absolute;
-  z-index: 1;
   width: 100%;
   height: 100%;
 }
@@ -52,11 +47,6 @@ button {
 }
 .hide-cursor {
   cursor: none;
-}
-video {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
 </style>
 </head>
