--- a/src/private/index.html
+++ b/src/private/index.html
@@ -51,7 +51,7 @@
       <li><a href="scroll14.html">Fixed bg table</a></li>
       <li><a href="scroll15.html">Invert outline color</a></li>
       <li><a href="scroll16.html">MIUI reduction</a></li>
-      <li><a href="scroll20.html">Preserve 3D transform style</a></li>
+      <li><a href="preserve3d03.html">Preserve 3D transform style</a></li>
       <li><a href="preserve3d01.html">Cube</a></li>
       <li><a href="http://www.effectgames.com/demos/canvascycle/">canvas 1 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="scroll01.html">CSS Filter Effects</a></li>
