--- a/src/private/index.html
+++ b/src/private/index.html
@@ -78,6 +78,7 @@
       <li><a href="scroll22.html">sticky 1</a></li>
       <li><a href="scroll23.html">sticky 2</a></li>
       <li><a href="scroll24.html">sticky (fake)</a></li>
+      <li><a href="scroll25.html">not want to see</a></li>
       <li><a href="https://www.w3schools.com/html/html5_video.asp">video <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="video01.html">video 1</a></li>
       <li><a href="video02.html">video 2</a></li>
