--- a/public/private/scroll25.html
+++ b/public/private/scroll25.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><style>.article-sticky-share__wrap {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>.article-sticky-share__wrap {
             left: 50vw;
             transform: translateX(-50%);
             position: absolute;
