--- a/src/private/scroll25.html
+++ b/src/private/scroll25.html
@@ -1,7 +1,9 @@
-﻿<!DOCTYPE HTML>
-<HTML>
-<HEAD>
-    <STYLE>
+﻿<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style>
         .article-sticky-share__wrap {
             left: 50vw;
             transform: translateX(-50%);
@@ -12,11 +14,11 @@
         body {
             margin: 8px 0 8px 0;
         }
-    </STYLE>
-</HEAD>
-<BODY>
-    <DIV class="article-sticky-share__wrap">
+    </style>
+</head>
+<body>
+    <div class="article-sticky-share__wrap">
         なんでこういうことするかな
-    </DIV>
-</BODY>
-</HTML>
+    </div>
+</body>
+</html>
