--- a/src/private/index.html
+++ b/src/private/index.html
@@ -85,6 +85,7 @@
       <li><a href="video03.html">video 3</a></li>
       <li><a href="video04.html">video 4</a></li>
       <li><a href="video05.html">video 5</a></li>
+      <li><a href="awesome.html">awesome</a></li>
     </ul>
   </body>
 </html>
