--- a/public/private/video06.html
+++ b/public/private/video06.html
@@ -43,6 +43,12 @@ body {
   background: transparent;
   background-color: #000;
 }
+#player:-webkit-full-screen {
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+}
 .controls {
   background: transparent;
 }
