--- a/src/private/index.html
+++ b/src/private/index.html
@@ -88,6 +88,7 @@
       <li><a href="video04.html">video 4</a></li>
       <li><a href="video05.html">video 5</a></li>
       <li><a href="video06.html">video 6</a></li>
+      <li><a href="video07.html">video 7</a></li>
       <li><a href="awesome.html">awesome</a></li>
     </ul>
   </body>
