--- a/public/private/video01.html
+++ b/public/private/video01.html
@@ -4,20 +4,17 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100vh;
 }
 main {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 50vw 50vw;
+  grid-template-rows: 50vh 50vh;
+}
+.center {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+  justify-self: center;
+  align-self: center;
 }
 .frame {
   background-color: black;
@@ -33,9 +30,14 @@ main {
   background-color: #000;
   overflow: hidden;
 }
-#bar {
+video {
   position: absolute;
-  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+#bar {
+  position: relative;
+  transform: none;
   top: 0;
   width: 100%;
   height: 4em;
@@ -61,17 +63,12 @@ button:hover {
   cursor: pointer;
 }
 .hide-bar {
-  top: -4em !important;
-  transition: top 0.4s;
+  transform: translateY(-100%) !important;
+  transition: transform 0.4s;
 }
 .hide-cursor {
   cursor: none;
-}
-video {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}</style></head><body><main><section class="frame"><div id="player"><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video></div></section></main><script>var player = document.getElementById('player');
+}</style></head><body><main><section class="frame"><div id="player"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div></section></main><script>var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
   var play = document.getElementById('play');
