--- a/public/private/video01.html
+++ b/public/private/video01.html
@@ -68,7 +68,7 @@ button:hover {
 }
 .hide-cursor {
   cursor: none;
-}</style></head><body><main><section class="frame"><div id="player"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div></section></main><script>var player = document.getElementById('player');
+}</style></head><body><main><section class="center frame"><div id="player"><video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video><div id="bar"><div class="buttons"><button id="play">Play | Pause</button> <button id="fullscreen">Fullscreen</button></div></div></div></section></main><script>var player = document.getElementById('player');
   var bar = document.getElementById('bar');
   var fullscreen = document.getElementById('fullscreen');
   var play = document.getElementById('play');
