--- a/src/private/video01.html
+++ b/src/private/video01.html
@@ -81,7 +81,7 @@ button:hover {
 
 <body>
 <main>
-  <section class="frame">
+  <section class="center frame">
     <div id="player">
       <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
       <div id="bar">
