--- a/src/private/index.html
+++ b/src/private/index.html
@@ -90,6 +90,7 @@
       <li><a href="video06.html">video 6</a></li>
       <li><a href="video07.html">video 7</a></li>
       <li><a href="awesome.html">awesome</a></li>
+      <li><a href="pdf01.html">embed pdf</a></li>
     </ul>
   </body>
 </html>
