npm audit fix and stuff

--- a/src/private/index.html
+++ b/src/private/index.html
@@ -62,6 +62,7 @@
       <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html">WebGL demo <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="http://www.fishgl.com/">FishGL <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="http://race.assassinscreedpirates.com/">Assassin’s Creed Pirates <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.figma.com/">WebGL, WebAssembly, React and more <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="svgasimg01.html">SVG-as-image</a></li>
       <li><a href="Z6310H.html">Site issue with touch</a></li>
       <li><a href="mobile-parallax-fixedbg.html">Mobile parallax</a></li>
