--- a/public/private/pdf01.html
+++ b/public/private/pdf01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>.clearfix:after {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="refresh" content="1; url=https://www.bing.com/"><style>.clearfix:after {
         content: "";
         display: table;
         clear: both;
