--- a/src/private/pdf01.html
+++ b/src/private/pdf01.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="refresh" content="1; url=https://www.bing.com/">
     <style>
       .clearfix:after {
         content: "";
