--- a/src/private/index.html
+++ b/src/private/index.html
@@ -91,7 +91,8 @@
       <li><a href="video06.html">video 6</a></li>
       <li><a href="video07.html">video 7</a></li>
       <li><a href="awesome.html">awesome</a></li>
-      <li><a href="pdf01.html">embed pdf</a></li>
+      <li><a href="pdf01.html">embed pdf 1</a></li>
+      <li><a href="pdf02.html">embed pdf 2</a></li>
     </ul>
   </body>
 </html>
