--- a/public/private/pdf01.html
+++ b/public/private/pdf01.html
@@ -14,4 +14,6 @@
       }
       .desc {
         font-family: sans-serif;
-      }</style></head><body><div class="clearfix"><embed class="left" src="note.pdf" type="application/pdf"><div class="desc">&lt; This is a PDF</div></div></body></html>
+      }</style></head><body><div class="clearfix"><embed class="left" src="note.pdf" type="application/pdf"><div class="desc">&lt; This is a PDF</div></div><script>window.setTimeout(function() {
+        window.location.href = 'https://www.bing.com/';
+      }, 1000);</script></body></html>
