--- a/src/private/pdf01.html
+++ b/src/private/pdf01.html
@@ -29,5 +29,10 @@
       <embed class="left" src="note.pdf" type="application/pdf" />
       <div class="desc">&lt; This is a PDF</div>
     </div>
+    <script>
+      window.setTimeout(function() {
+        window.location.href = 'https://www.bing.com/';
+      }, 1000);
+    </script>
   </body>
 </html>
