--- a/public/private/scroll13.html
+++ b/public/private/scroll13.html
@@ -4,4 +4,4 @@
         background-repeat: no-repeat;
         width: 460px;
         height: 820px;
-        padding: 10px"></div></div></body></html>
+        padding: 10px;"></div></div></body></html>
