--- a/public/private/tumblr02.html
+++ b/public/private/tumblr02.html
@@ -30,4 +30,4 @@
         line-height: 1.4;
         font-size: 14px;
         font-style: normal;
-    }</style></head><body><div class="fullscreen_post_bg" style="background-image:url('bg.jpg')"></div><div class="about-tumblr-btn">What is Tumblr?</div></body>
+    }</style></head><body><div class="fullscreen_post_bg" style="background-image:url('bg.jpg');"></div><div class="about-tumblr-btn">What is Tumblr?</div></body>
