--- a/public/private/scroll03.html
+++ b/public/private/scroll03.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(bg.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px;"><div style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: scroll;
       background-size: cover;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></body></html>
+      height: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div></body></html>
