--- a/public/private/scroll04.html
+++ b/public/private/scroll04.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><img id="intersected" src="bg.jpg" style="position: fixed;
       width: 100%;
-      height: 100%"><div style="position: relative;
+      height: 100%;"><div style="position: relative;
       top: 0px;
       left: 20%;
       width: 60%;
       height: 3000px;
-      background-color: white"><div id="iiLayer" style="position: relative;
+      background-color: white;"><div id="iiLayer" style="position: relative;
         z-index: 1;
-        height: 140px"></div></div><div style="position: absolute;
+        height: 140px;"></div></div><div style="position: absolute;
       top: 0px;
-      left: 20%"><img src="../images/wood.gif" width="160" height="140"></div></body></html>
+      left: 20%;"><img src="../images/wood.gif" width="160" height="140"></div></body></html>
