--- a/public/private/scroll09.html
+++ b/public/private/scroll09.html
@@ -3,21 +3,21 @@
       left: 25%;
       width: 50%;
       background: white;
-      padding-top: 5%"><div id="background" style="position: fixed;
+      padding-top: 5%;"><div id="background" style="position: fixed;
         z-index: -1;
         opacity: 0;
         top: 0px;
         left: 0px;
         width: 100%;
         height: 100%;
-        background: #490f76"><div id="footer" style="position: absolute;
+        background: #490f76;"><div id="footer" style="position: absolute;
           top: 90%;
           left: 0px;
           width: 100%;
           height: 10%;
-          background: red"></div></div><div id="header" style="position: fixed;
+          background: red;"></div></div><div id="header" style="position: fixed;
         top: 0px;
         left: 0px;
         width: 100%;
         height: 10%;
-        background: green"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div><div style="background: #bfa79b; margin: 50px; padding: 50px"></div></div></body></html>
+        background: green;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div><div style="background: #bfa79b; margin: 50px; padding: 50px;"></div></div></body></html>
