--- a/public/private/scroll11.html
+++ b/public/private/scroll11.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><img id="theme" src="transparent-95031.png" style="background-image: url(bg.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px;"><img id="theme" src="transparent-95031.png" style="background-image: url(bg.jpg);
       position: fixed;
       background-size: cover;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%"><div id="header-image" style="background-image: url(bg.jpg);
+      height: 100%;"><div id="header-image" style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
@@ -14,4 +14,4 @@
       height: 100px;
       border-bottom: 1px solid #490f76;
       box-shadow: 0 0 9px 0 #490f76;
-      z-index: 9"></div><div id="myContent" style="position: relative"><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></div></body></html>
+      z-index: 9;"></div><div id="myContent" style="position: relative;"><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div></div></body></html>
