--- a/public/private/scroll14.html
+++ b/public/private/scroll14.html
@@ -10,4 +10,4 @@
     margin: 30px auto;
     width: 53%;
     border: 20px solid rgba(51, 51, 72, 0.7);
-  }</style></head><body style="margin: 0px"><table id="outerWrapper"><tr><td><div id="innerWrapper"><div style="height: 3000px"></div></div></td></tr></table></body></html>
+  }</style></head><body style="margin: 0px;"><table id="outerWrapper"><tr><td><div id="innerWrapper"><div style="height: 3000px;"></div></div></td></tr></table></body></html>
