--- a/public/private/scroll15.html
+++ b/public/private/scroll15.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(bg.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px;"><div style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
@@ -7,4 +7,4 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></body></html>
+      height: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div></body></html>
