--- a/public/private/scroll16.html
+++ b/public/private/scroll16.html
@@ -4,7 +4,7 @@
         top: 0;
         width: 100%;
         height: 48px;
-        background: #fd7b5d"><div id="scrolltop" style="position: fixed;
+        background: #fd7b5d;"><div id="scrolltop" style="position: fixed;
           left: 1431px;
           bottom: 105px;
           margin: -30px 0 0 10px;
@@ -14,7 +14,7 @@
           border-radius: 3px;
           border-top: 0;
           cursor: pointer;
-          background: lightgray"></div></div></div><div id="wp" style="margin: 0 auto;
+          background: lightgray;"></div></div></div><div id="wp" style="margin: 0 auto;
       width: 960px;
       height: 3000px;
-      background: #f7f7f7"></div></body></html>
+      background: #f7f7f7;"></div></body></html>
