--- a/public/private/scroll19.html
+++ b/public/private/scroll19.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(bg.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px;"><div style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100px"><div style="outline-color: invert;
+      height: 100px;"><div style="outline-color: invert;
         outline-style: solid;
         width: 100%;
-        height: 100px"></div></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></body></html>
+        height: 100px;"></div></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div><div style="background: #bfa79b; margin: 100px; padding: 100px;"></div></body></html>
